--- a/style1.css
+++ b/style1.css
@@ -1,1 +1,131 @@
-@keyframes showMenu{from{transform:translateY(-1rem);opacity:0}to{transform:translateY(0);opacity:1}}@keyframes hideMenu{from{transform:translateY(0);opacity:1;visibility:visible}to{transform:translateY(-1rem);opacity:0;visibility:hidden}}.header__item{margin:0;padding:0}.header__link{font-weight:700;opacity:.6;transition:opacity .15s ease-in-out;text-decoration:none;color:#333}.header__link:hover{opacity:1}.header__link_current{opacity:1}.main{display:grid;flex:0 0 auto;grid-template-columns:50% 50%;gap:1.625rem;padding:0 2.5rem}@media (max-width:768px){.main{padding:0 1.25rem}}@media (max-width:1024px){.main{grid-template-columns:100%}}.main__devices{grid-column-start:1;grid-column-end:3}@media (max-width:1024px){.main__devices{grid-column-end:2}}.section__title-header{margin:0;font-size:1.125rem;font-weight:700;color:#333}.section__title{display:flex;align-items:baseline;margin:0 0 1.25rem 0}@media (max-width:768px){.section__title{gap:1rem}.section__main-title{display:none}}.section__select{display:none;margin:0 0 0 auto;padding:.4375rem 1.9375rem .5rem 1rem;border:none;border-radius:1.25rem;font-size:.8125rem;font-family:inherit;font-weight:700;background:no-repeat calc(100% - 1rem) 50% #FFD93E url(assets/arrow-down.svg);appearance:none}@media (max-width:768px){.section__select{display:block}}.section__tabs{display:flex;gap:.625rem;align-items:baseline;margin:0 0 0 .8125rem;padding:0;list-style:none}@media (max-width:768px){.section__tabs{display:none}}.section__tab{flex:0 0 auto;padding:.4375rem .9375rem .5rem;font-size:.8125rem;font-weight:700;background:#F7F7F7;border-radius:1024px;cursor:pointer;transition:.25s ease-in-out;transition-property:background-color,box-shadow}
+
+.main {
+    display: grid;
+    flex: 0 0 auto;
+    grid-template-columns: 50% 50%;
+    gap: 1.625rem;
+    padding: 0 2.5rem;
+}
+
+@media (max-width: 768px) {
+    .main {
+        padding: 0 1.25rem;
+    }
+}
+
+@media (max-width: 1024px) {
+    .main {
+        grid-template-columns: 100%;
+    }
+}
+
+.main__devices {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+@media (max-width: 1024px) {
+    .main__devices {
+        grid-column-end: 2;
+    }
+}
+
+.section__title-header {
+    margin: 0;
+    font-size: 1.125rem;
+    font-weight: bold;
+    color: #333333;
+}
+
+.section__title {
+    display: flex;
+    align-items: baseline;
+    margin: 0 0 1.25rem 0;
+}
+
+@media (max-width: 768px) {
+    .section__title {
+        gap: 1rem;
+    }
+
+    .section__main-title {
+        display: none;
+    }
+}
+
+.section__select {
+    display: none;
+    margin: 0 0 0 auto;
+    padding: 0.4375rem 1.9375rem .5rem 1rem;
+    border: none;
+    border-radius: 1.25rem;
+    font-size: 0.8125rem;
+    font-family: inherit;
+    font-weight: bold;
+    background: no-repeat calc(100% - 1rem) 50% #FFD93E url(assets/arrow-down.svg);
+    appearance: none;
+}
+
+@media (max-width: 768px) {
+    .section__select {
+        display: block;
+    }
+}
+
+.section__tabs {
+    display: flex;
+    gap: 0.625rem;
+    align-items: baseline;
+    margin: 0 0 0 0.8125rem;
+    padding: 0;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    .section__tabs {
+        display: none;
+    }
+}
+
+.section__tab {
+    flex: 0 0 auto;
+    padding: 0.4375rem 0.9375rem .5rem;
+    font-size: 0.8125rem;
+    font-weight: bold;
+    background: #F7F7F7;
+    border-radius: 1024px;
+    cursor: pointer;
+    transition: .25s ease-in-out;
+    transition-property: background-color, box-shadow;
+}
+
+.section__tab_active {
+    background: #FFD93E;
+}
+
+.section__tab:not(.section__tab_active):hover {
+    background: #fff;
+    box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
+}
+
+.hero-dashboard {
+    position: relative;
+    box-sizing: border-box;
+    display: flex;
+    gap: 0.9375rem;
+    height: 20.6875rem;
+    background: no-repeat 50% 50% url(assets/bg@2x.webp);
+    /*background-size: cover;*/
+    background-size: 1260px;
+    border-radius: 1.25rem;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard {
+        flex-direction: column;
+        gap: 1.25rem;
+        height: auto;
+        margin-bottom: 0.3125rem;
+        background-image: url("./assets/bg@2x.webp");
+    }
+}
