--- a/style2.css
+++ b/style2.css
@@ -1,1 +1,115 @@
-@media (max-width:768px){.hero-dashboard{flex-direction:column;gap:1.25rem;height:auto;margin-bottom:.3125rem;background-image:url("./assets/bg@2x.png")}}.hero-dashboard__primary{flex:1 1 auto;padding:1.25rem 0 1.25rem 1.25rem}@media (max-width:768px){.hero-dashboard__primary{padding:1.25rem 1.25rem 0 1.25rem}}.hero-dashboard__title{margin:.375rem 0;font-size:1.6875rem;font-weight:700;color:#333}@media (max-width:768px){.hero-dashboard__title{font-size:1.125rem}}.hero-dashboard__subtitle{margin:.375rem 0 0 0;font-size:.875rem;color:#333}@media (max-width:768px){.hero-dashboard__subtitle{margin:.3125rem 0 0 0;font-size:.75rem}}.hero-dashboard__info{display:flex;gap:1.125rem;margin:1.5625rem 0 0 0;padding:0;list-style:none}@media (max-width:768px){.hero-dashboard__info{margin-top:.9375rem}}.hero-dashboard__item{margin:0;padding:0}.hero-dashboard__item-title{font-size:.875rem;color:#858585}@media (max-width:768px){.hero-dashboard__item-title{font-size:.75rem}}.hero-dashboard__item-details{display:flex;align-items:center;margin-top:.25rem;font-size:2.25rem;font-weight:700;color:#333}@media (max-width:768px){.hero-dashboard__item-details{margin-top:.3125rem;font-size:1.5rem}}.hero-dashboard__icon{width:1.625rem;height:1.625rem;margin-left:.3125rem;background-position:50% 50%;background-repeat:no-repeat;background-size:contain}@media (max-width:768px){.hero-dashboard__icon{width:1.375rem;height:1.375rem}}.hero-dashboard__icon_rain{background-image:url(assets/cloud-drizzle.svg)}.hero-dashboard__schedule{display:flex;flex:0 0 auto;flex-direction:column;gap:.9375rem;margin:0;padding:1.25rem 1.5625rem 1.25rem 0;overflow:auto;list-style:none;scrollbar-width:none}.hero-dashboard__schedule::-webkit-scrollbar{display:none}@media (max-width:768px){.hero-dashboard__schedule{flex-direction:row;padding:0 1.25rem 1.25rem 1.25rem}}.event__button{position:relative;display:flex;flex-direction:column;justify-content:end;gap:.1875rem;width:100%;min-width:12.5rem;height:7.5rem;margin:0;padding:.875rem;border-radius:1.25rem;border:none;background:#F7F7F7;text-align:left;transition:.25s ease-in-out;transition-property:background-color,box-shadow;cursor:pointer;appearance:none}.event_slim .event__button{height:6.25rem}.event__button:hover{background:#fff;box-shadow:0 2px 6px 0 rgba(197,186,186,.5)}
+
+.hero-dashboard__primary {
+    flex: 1 1 auto;
+    padding: 1.25rem 0 1.25rem 1.25rem;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__primary {
+        padding: 1.25rem 1.25rem 0 1.25rem;
+    }
+}
+
+.hero-dashboard__title {
+    margin: 0.375rem 0;
+    font-size: 1.6875rem;
+    font-weight: bold;
+    color: #333333;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__title {
+        font-size: 1.125rem;
+    }
+}
+
+.hero-dashboard__subtitle {
+    margin: 0.375rem 0 0 0;
+    font-size: 0.875rem;
+    color: #333333;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__subtitle {
+        margin: 0.3125rem 0 0 0;
+        font-size: .75rem;
+    }
+}
+
+.hero-dashboard__info {
+    display: flex;
+    gap: 1.125rem;
+    margin: 1.5625rem 0 0 0;
+    padding: 0;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__info {
+        margin-top: 0.9375rem;
+    }
+}
+
+.hero-dashboard__item {
+    margin: 0;
+    padding: 0;
+}
+
+.hero-dashboard__item-title {
+    font-size: 0.875rem;
+    color: #858585;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__item-title {
+        font-size: .75rem;
+    }
+}
+
+.hero-dashboard__item-details {
+    display: flex;
+    align-items: center;
+    margin-top: .25rem;
+    font-size: 2.25rem;
+    font-weight: bold;
+    color: #333333;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__item-details {
+        margin-top: 0.3125rem;
+        font-size: 1.5rem;
+    }
+}
+
+.hero-dashboard__icon {
+    width: 1.625rem;
+    height: 1.625rem;
+    margin-left: 0.3125rem;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__icon {
+        width: 1.375rem;
+        height: 1.375rem;
+    }
+}
+
+.hero-dashboard__icon_rain {
+    background-image: url(assets/cloud-drizzle.svg);
+}
+
+.hero-dashboard__schedule {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    gap: 0.9375rem;
+    margin: 0;
+    padding: 1.25rem 1.5625rem 1.25rem 0;
+    overflow: auto;
+    list-style: none;
+    scrollbar-width: none;
+}
