--- a/style3.css
+++ b/style3.css
@@ -1,1 +1,206 @@
-.footer{display:flex;flex:0 0 auto;align-items:center;height:4rem;margin-top:auto;padding:0 2.5rem}@media (max-width:768px){.footer{flex-direction:column;align-items:flex-start;gap:.9375rem;height:auto;padding-top:1rem;padding-bottom:1rem}}.footer__list{display:flex;align-items:baseline;gap:.9375rem;margin:0;padding:0;list-style:none}@media (max-width:768px){.footer__list{flex-direction:column;align-items:flex-start}}.footer__link{font-size:.75rem;color:#858585;transition:opacity .15s ease-in-out;text-decoration:none}.footer__link:hover{color:#000}.footer__copyright{margin-left:auto;font-size:.75rem;color:#858585}@media (max-width:768px){.footer__copyright{margin-left:0}}
+
+.hero-dashboard__schedule::-webkit-scrollbar {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .hero-dashboard__schedule {
+        flex-direction: row;
+        padding: 0 1.25rem 1.25rem 1.25rem;
+    }
+}
+
+.event__button {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    gap: 0.1875rem;
+    width: 100%;
+    min-width: 12.5rem;
+    height: 7.5rem;
+    margin: 0;
+    padding: 0.875rem;
+    border-radius: 1.25rem;
+    border: none;
+    background: #F7F7F7;
+    text-align: left;
+    transition: .25s ease-in-out;
+    transition-property: background-color, box-shadow;
+    cursor: pointer;
+    appearance: none;
+}
+
+.event_slim .event__button {
+    height: 6.25rem;
+}
+
+.event__button:hover {
+    background: #fff;
+    box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
+}
+
+.event__icon {
+    position: absolute;
+    top: 0.875rem;
+    left: 0.875rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+}
+
+.event__icon_temp {
+    background-image: url(assets/icon_temperature.svg);
+}
+
+.event__icon_temp2 {
+    background-image: url(assets/icon_temperature_2.svg);
+}
+
+.event__icon_light {
+    background-image: url(assets/icon_sun.svg);
+}
+
+.event__icon_light2 {
+    background-image: url(assets/icon_sun_2.svg);
+}
+
+.event__icon_schedule {
+    background-image: url(assets/icon_scheduled.svg);
+}
+
+.event__title {
+    margin: 0;
+    font-size: 0.875rem;
+    font-weight: bold;
+    color: #333333;
+}
+
+.event__subtitle {
+    font-size: .75rem;
+    color: #858585;
+}
+
+.event-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 0.9375rem;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    .event-grid {
+        display: flex;
+        padding-bottom: 0.3125rem;
+        overflow: auto;
+        scrollbar-width: none;
+    }
+
+    .event-grid::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.section__panel {
+    padding-bottom: .625rem;
+    overflow-x: auto;
+    scrollbar-width: none;
+}
+
+.section__panel::-webkit-scrollbar {
+    display: none;
+}
+
+.section__panel_hidden {
+    display: none;
+}
+
+.section__panel-list {
+    display: flex;
+    gap: 0.9375rem;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.section__panel-wrapper {
+    position: relative;
+}
+
+.section__arrow {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 18px;
+    bottom: 10px;
+    background: no-repeat 50% 50% url(./assets/arrow-left.png);
+    transform: rotate(180deg);
+    cursor: pointer;
+}
+
+.section__arrow:hover {
+    opacity: .7;
+}
+
+.footer {
+    display: flex;
+    flex: 0 0 auto;
+    align-items: center;
+    height: 4rem;
+    margin-top: auto;
+    padding: 0 2.5rem;
+}
+
+@media (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.9375rem;
+        height: auto;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+}
+
+.footer__list {
+    display: flex;
+    align-items: baseline;
+    gap: 0.9375rem;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    .footer__list {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+.footer__link {
+    font-size: .75rem;
+    color: #858585;
+    transition: opacity .15s ease-in-out;
+    text-decoration: none;
+}
+
+.footer__link:hover {
+    color: #000;
+}
+
+.footer__copyright {
+    margin-left: auto;
+    font-size: .75rem;
+    color: #858585;
+}
+
+@media (max-width: 768px) {
+    .footer__copyright {
+        margin-left: 0;
+    }
+}
