--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,160 @@
-html{font-size:100%;font-family:Arial,sans-serif;line-height:1.25}body{display:flex;flex-direction:column;font-family:inherit;line-height:inherit;margin:0}html,body{height:100%}.a11y-hidden{position:absolute;left:auto;height:1px;width:1px;top:0;overflow:hidden;clip:rect(1px 1px 1px 1px)}.header{position:relative;display:flex;flex:0 0 auto;align-items:center;height:5.75rem;margin-bottom:1.875rem;padding:0 2.5rem;font-family:Arial,sans-serif;border-bottom:1px solid #F0F0F0}@media (max-width:768px){.header{height:4rem;margin-bottom:0;padding:0 0 0 1.25rem;border-bottom:none}}.header__logo{flex:0 0 auto;width:6.75rem;height:2.3125rem;margin-right:3.25rem;background:no-repeat 50% 50% url(assets/logo.svg);background-size:contain}.header__menu{display:none;width:3.5rem;height:100%;margin:0 0 0 auto;padding:0;background:50% 50% no-repeat transparent url(assets/icon_list_m@1x.svg);border:none;border-radius:0;appearance:none;cursor:pointer}@media (max-width:768px){.header__menu{display:block}}.header__links{display:flex;gap:1.75rem;margin:0;padding:0;list-style:none}@media (max-width:768px){.header__links{display:none;position:absolute;z-index:1;top:100%;left:0;box-sizing:border-box;flex-direction:column;width:100%;padding:1.25rem;background:#fff;box-shadow:0 2px 6px 0 rgba(197,186,186,.5)}.header__links-toggled{display:flex;animation:hideMenu .3s ease-in-out 1;animation-fill-mode:both}.header__links_opened{display:flex;visibility:visible;animation:showMenu .3s ease-in-out 1;animation-fill-mode:both}}.section__tab_active{background:#FFD93E}.section__tab:not(.section__tab_active):hover{background:#fff;box-shadow:0 2px 6px 0 rgba(197,186,186,.5)}.hero-dashboard{position:relative;box-sizing:border-box;display:flex;gap:.9375rem;height:20.6875rem;background:no-repeat 50% 50% url(assets/bg@2x.png);background-size:1260px;border-radius:1.25rem}.event__icon{position:absolute;top:.875rem;left:.875rem;width:1.5rem;height:1.5rem;background-repeat:no-repeat;background-position:50% 50%;background-size:contain}.event__icon_temp{background-image:url(assets/icon_temperature.svg)}.event__icon_temp2{background-image:url(assets/icon_temperature_2.svg)}.event__icon_light{background-image:url(assets/icon_sun.svg)}.event__icon_light2{background-image:url(assets/icon_sun_2.svg)}.event__icon_schedule{background-image:url(assets/icon_scheduled.svg)}.event__title{margin:0;font-size:.875rem;font-weight:700;color:#333}.event__subtitle{font-size:.75rem;color:#858585}.event-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:.9375rem;margin:0;padding:0;list-style:none}@media (max-width:768px){.event-grid{display:flex;padding-bottom:.3125rem;overflow:auto;scrollbar-width:none}.event-grid::-webkit-scrollbar{display:none}}.section__panel{padding-bottom:.625rem;overflow-x:auto;scrollbar-width:none}.section__panel::-webkit-scrollbar{display:none}.section__panel_hidden{display:none}.section__panel-list{display:flex;gap:.9375rem;margin:0;padding:0;list-style:none}.section__panel-wrapper{position:relative}.section__arrow{position:absolute;top:0;right:0;width:18px;bottom:10px;background:no-repeat 50% 50% url(./assets/arrow-left.png);transform:rotate(180deg);cursor:pointer}.section__arrow:hover{opacity:.7}
+
+html {
+    font-size: 100%;
+    font-family: Arial, sans-serif;
+    line-height: 1.25;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    font-family: inherit;
+    line-height: inherit;
+    margin: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+.a11y-hidden {
+    position: absolute;
+    left: auto;
+    height: 1px;
+    width: 1px;
+    top: 0;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+}
+
+.header {
+    position: relative;
+    display: flex;
+    flex: 0 0 auto;
+    align-items: center;
+    height: 5.75rem;
+    margin-bottom: 1.875rem;
+    padding: 0 2.5rem;
+    font-family: Arial, sans-serif;
+    border-bottom: 1px solid #F0F0F0;
+}
+
+@media (max-width: 768px) {
+    .header {
+        height: 4rem;
+        margin-bottom: 0;
+        padding: 0 0 0 1.25rem;
+        border-bottom: none;
+    }
+}
+
+.header__logo {
+    flex: 0 0 auto;
+    width: 6.75rem;
+    height: 2.3125rem;
+    margin-right: 3.25rem;
+    background: no-repeat 50% 50% url(assets/logo.svg);
+    background-size: contain;
+}
+
+.header__menu {
+    display: none;
+    width: 3.5rem;
+    height: 100%;
+    margin: 0 0 0 auto;
+    padding: 0;
+    background: 50% 50% no-repeat transparent url(assets/icon_list_m@1x.svg);
+    border: none;
+    border-radius: 0;
+    appearance: none;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .header__menu {
+        display: block;
+    }
+}
+
+.header__links {
+    display: flex;
+    gap: 1.75rem;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    .header__links {
+        display: none;
+
+        position: absolute;
+        z-index: 1;
+        top: 100%;
+        left: 0;
+        box-sizing: border-box;
+        flex-direction: column;
+        width: 100%;
+        padding: 1.25rem;
+        background: #fff;
+        box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
+    }
+
+    .header__links-toggled {
+        display: flex;
+        animation: hideMenu .3s ease-in-out 1;
+        animation-fill-mode: both;
+    }
+
+    .header__links_opened {
+        display: flex;
+        visibility: visible;
+        animation: showMenu .3s ease-in-out 1;
+        animation-fill-mode: both;
+    }
+}
+
+@keyframes showMenu {
+    from {
+        transform: translateY(-1rem);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes hideMenu {
+    from {
+        transform: translateY(0);
+        opacity: 1;
+        visibility: visible;
+    }
+    to {
+        transform: translateY(-1rem);
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.header__item {
+    margin: 0;
+    padding: 0;
+}
+
+.header__link {
+    font-weight: bold;
+    opacity: .6;
+    transition: opacity .15s ease-in-out;
+    text-decoration: none;
+    color: #333333;
+}
+
+.header__link:hover {
+    opacity: 1;
+}
+
+.header__link_current {
+    opacity: 1;
+}
